# apprentissage_profond_projet

./: README.md  load.ipynb  pyproject.toml
.ipynb_checkpoints/: load-checkpoint.ipynb
Film/: capture.py  sauvegarde.txt
Images/: sauvegarde.txt
Scripts/: pyproject.toml
Scripts/src/: scrap.py
c_images/: rename.py
