[tool.poetry]
name = "apprentissage_profond_projet"
version = "0.1.0"
description = ""
authors = ["Floriane Payen <payenf@bde.enseeiht.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
