[tool.poetry]
name = "projet-mickey"
version = "0.1.0"
description = ""
authors = ["antonin-tarrade <antotarrade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
html5lib = "^1.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
